--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,21 @@
         }
     },
     "require": {
-        "drupal/paragraphs": "~1.3"
+        "drupal/admin_toolbar": "~1.24",
+        "drupal/ctools": "~3.0",
+        "drupal/devel": "1.x-dev",
+        "drupal/entity_browser": "~2.0",
+        "drupal/image_widget_crop": "~2.2",
+        "drupal/inline_entity_form": "~1.0",
+        "drupal/menu_admin_per_menu": "~1.0",
+        "drupal/metatag": "~1.5",
+        "drupal/paragraphs": "~1.3",
+        "drupal/pathauto": "~1.2",
+        "drupal/rest_menu_items": "~2.4",
+        "drupal/restui": "~1.15",
+        "drupal/services_api_key_auth": "~1.0",
+        "drupal/simple_sitemap": "~2.12",
+        "drupal/video_embed_field": "~2.0",
+        "hoppinger/simple_system_page_access": "dev-master",
     }
 }
