Add modules and add editor role

--- a/hoppinger_drupal_profile.info.yml
+++ b/hoppinger_drupal_profile.info.yml
@@ -25,5 +25,11 @@ dependencies:
   - file
   - views
   - views_ui
+  - admin_toolbar
+  - simple_system_page_access
+  - devel
+  - kint
+  - menu_admin_per_menu
+  - pathauto
 themes:
   - seven
