Add media type image

--- a/hoppinger_drupal_profile.info.yml
+++ b/hoppinger_drupal_profile.info.yml
@@ -31,5 +31,9 @@ dependencies:
   - kint
   - menu_admin_per_menu
   - pathauto
+  - media
+  - video_embed_field
+  - video_embed_media
+  - image_widget_crop
 themes:
   - seven
