--- a/config/install/user.role.editor.yml
+++ b/config/install/user.role.editor.yml
@@ -11,3 +11,13 @@ permissions:
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'administer main menu items'
+  - 'access media overview'
+  - 'create document media'
+  - 'create image media'
+  - 'create video media'
+  - 'delete any document media'
+  - 'delete any image media'
+  - 'delete any video media'
+  - 'edit any document media'
+  - 'edit any image media'
+  - 'edit any video media'
