--- a/config/install/user.role.editor.yml
+++ b/config/install/user.role.editor.yml
@@ -8,16 +8,22 @@ is_admin: false
 permissions:
   - 'access administration pages'
   - 'access content overview'
+  - 'access media overview'
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'administer main menu items'
-  - 'access media overview'
   - 'create document media'
   - 'create image media'
+  - 'create page content'
   - 'create video media'
   - 'delete any document media'
   - 'delete any image media'
+  - 'delete any page content'
   - 'delete any video media'
   - 'edit any document media'
   - 'edit any image media'
+  - 'edit any page content'
   - 'edit any video media'
+  - 'revert page revisions'
+  - 'use text format html'
+  - 'view page revisions'
