--- a/config/install/core.entity_form_display.paragraph.downloads.default.yml
+++ b/config/install/core.entity_form_display.paragraph.downloads.default.yml
@@ -2,28 +2,27 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_video
-    - field.field.paragraph.media.field_media
-    - paragraphs.paragraphs_type.media
+    - entity_browser.browser.document
+    - field.field.paragraph.downloads.field_downloads
+    - paragraphs.paragraphs_type.downloads
   module:
     - entity_browser
-id: paragraph.media.default
+id: paragraph.downloads.default
 targetEntityType: paragraph
-bundle: media
+bundle: downloads
 mode: default
 content:
-  field_media:
+  field_downloads:
     weight: 0
     settings:
-      entity_browser: image_video
-      field_widget_display: rendered_entity
+      entity_browser: document
+      field_widget_display: label
       field_widget_edit: true
       field_widget_remove: true
       open: true
       selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: browser
       field_widget_replace: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
