--- a/config/install/field.field.node.page.field_page_content.yml
+++ b/config/install/field.field.node.page.field_page_content.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.storage.node.field_page_content
     - node.type.page
+    - paragraphs.paragraphs_type.downloads
     - paragraphs.paragraphs_type.media
     - paragraphs.paragraphs_type.text
   module:
@@ -25,6 +26,7 @@ settings:
     target_bundles:
       text: text
       media: media
+      downloads: downloads
     target_bundles_drag_drop:
       text:
         enabled: true
@@ -32,4 +34,7 @@ settings:
       media:
         enabled: true
         weight: -4
+      downloads:
+        enabled: true
+        weight: 4
 field_type: entity_reference_revisions
